--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="{$googleMapKey}" />
+            android:value="${google_map_key}" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -94,10 +94,10 @@
         <!-- Branch init -->
         <meta-data
             android:name="io.branch.sdk.BranchKey"
-            android:value="{$BranchKey}" />
+            android:value="${branch_key}" />
         <meta-data
             android:name="io.branch.sdk.BranchKey.test"
-            android:value="{$BranchTestKey}" />
+            android:value="${branch_test_key}" />
         <meta-data
             android:name="io.branch.sdk.TestMode"
             android:value="false" />     <!-- Set to true to use Branch_Test_Key (useful when simulating installs and/or switching between debug and production flavors) -->
