add fcm remote config

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,8 @@
                 android:value="androidx.startup" />
             <meta-data  android:name="com.android.l2l.twolocal.common.initializer.BranchInitializer"
                 android:value="androidx.startup" />
+            <meta-data  android:name="com.android.l2l.twolocal.common.initializer.RemoteConfigInitializer"
+                android:value="androidx.startup" />
         </provider>
 
     </application>
